Fix focus state data in AXTreeSourceArc.

Rather than relying on events, use the isFocused data from Android AccessibilityNodeInfo. This resolves various issues including:
- initial focus. Users can now use Search+left and Search+right on initial launch of the app since focus properly points to content within the app
- text field focus/input tracking. Since ChromeVox only reads output from focused text fields, we need this data to be accurate. This was sometimes flakey.

TEST=verify consistent tracking of focus when clicking on text fields and other focus transitions.

Bug: 744714
Change-Id: I5a304d95a927c6a25f0fa5c3bc002a1771c3a065
Reviewed-on: https://chromium-review.googlesource.com/575568
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Yuki Awano <yawano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487508}
Former-commit-id: b5bb8a4fb44cea51c624b44287b8de4273c517cf